--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:11:24 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:12:07 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -396,22 +396,6 @@ E thru 16</td>
 +3 thru 17</td>
     </tr>
     <tr>
-      <td class="bigbold">Jack Fleck</td>
-      <td class="bigbold">-8</td>
-      <td>Cameron Smith -6
--6 thru 17</td>
-      <td>Rory McIlroy(W) -1
--1 thru 5</td>
-      <td>Tiger Woods -1
--1 thru 17</td>
-      <td>Hideki Matsuyama E
-E thru 16</td>
-      <td class="greyout leftborder">Xander Schauffele +1
-+1 thru 6</td>
-      <td class="greyout">Justin Thomas +3
-+3 thru 16</td>
-    </tr>
-    <tr>
       <td class="bigbold">Don Shaw</td>
       <td class="bigbold">-7</td>
       <td>Cameron Smith -6
@@ -460,6 +444,22 @@ E thru 16</td>
 +1 thru 7</td>
     </tr>
     <tr>
+      <td class="bigbold">Jack Fleck</td>
+      <td class="bigbold">-7</td>
+      <td>Cameron Smith -6
+-6 thru 17</td>
+      <td>Tiger Woods -1
+-1 thru 17</td>
+      <td>Rory McIlroy(W) E
+E thru 6</td>
+      <td>Hideki Matsuyama E
+E thru 16</td>
+      <td class="greyout leftborder">Xander Schauffele +1
++1 thru 6</td>
+      <td class="greyout">Justin Thomas +3
++3 thru 16</td>
+    </tr>
+    <tr>
       <td class="bigbold">Albert Selina</td>
       <td class="bigbold">-6</td>
       <td>Scottie Scheffler -3
@@ -492,22 +492,6 @@ E thru 5</td>
 +3 thru 16</td>
     </tr>
     <tr>
-      <td class="bigbold">Glitter Girl</td>
-      <td class="bigbold">-6</td>
-      <td>Cameron Smith -6
--6 thru 17</td>
-      <td>Rory McIlroy -1
--1 thru 5</td>
-      <td>Jordan Spieth E
-E thru 6</td>
-      <td>Jon Rahm(W) +1
-+1 thru 7</td>
-      <td class="greyout leftborder">Viktor Hovland +1
-+1 thru 6</td>
-      <td class="greyout">Bubba Watson +1
-+1 thru 10</td>
-    </tr>
-    <tr>
       <td class="bigbold">Matt Wilson</td>
       <td class="bigbold">-5</td>
       <td>Scottie Scheffler(W) -3
@@ -524,20 +508,20 @@ E thru 6</td>
 +1 thru 6</td>
     </tr>
     <tr>
-      <td class="bigbold">Benjac</td>
+      <td class="bigbold">Glitter Girl</td>
       <td class="bigbold">-5</td>
       <td>Cameron Smith -6
 -6 thru 17</td>
-      <td>Rory McIlroy -1
--1 thru 5</td>
-      <td>Sam Burns +1
-+1 thru 8</td>
-      <td>Xander Schauffele +1
+      <td>Rory McIlroy E
+E thru 6</td>
+      <td>Jordan Spieth E
+E thru 6</td>
+      <td>Jon Rahm(W) +1
++1 thru 7</td>
+      <td class="greyout leftborder">Viktor Hovland +1
 +1 thru 6</td>
-      <td class="greyout leftborder">Justin Thomas(W) +3
-+3 thru 16</td>
-      <td class="greyout">Justin Rose +5
-+5 thru 12</td>
+      <td class="greyout">Bubba Watson +1
++1 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">CRED</td>
@@ -556,20 +540,20 @@ E thru 5</td>
 +1 thru 16</td>
     </tr>
     <tr>
-      <td class="bigbold">Roy Jeffrey B</td>
+      <td class="bigbold">Benjac</td>
       <td class="bigbold">-4</td>
-      <td>Scottie Scheffler(W) -3
--3 thru 15</td>
-      <td>Corey Conners -1
--1 thru 11</td>
-      <td>Rory McIlroy -1
--1 thru 5</td>
-      <td>Patrick Cantlay +1
-+1 thru 7</td>
-      <td class="greyout leftborder">Jon Rahm +1
-+1 thru 7</td>
-      <td class="greyout">Robert MacIntyre +2
-+2 thru 12</td>
+      <td>Cameron Smith -6
+-6 thru 17</td>
+      <td>Rory McIlroy E
+E thru 6</td>
+      <td>Sam Burns +1
++1 thru 8</td>
+      <td>Xander Schauffele +1
++1 thru 6</td>
+      <td class="greyout leftborder">Justin Thomas(W) +3
++3 thru 16</td>
+      <td class="greyout">Justin Rose +5
++5 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Stan and Ollie Garch</td>
@@ -620,20 +604,20 @@ E thru 15</td>
 +3 thru 16</td>
     </tr>
     <tr>
-      <td class="bigbold">Jabby</td>
+      <td class="bigbold">Roy Jeffrey B</td>
       <td class="bigbold">-3</td>
+      <td>Scottie Scheffler(W) -3
+-3 thru 15</td>
       <td>Corey Conners -1
 -1 thru 11</td>
-      <td>Rory McIlroy -1
--1 thru 5</td>
-      <td>Will Zalatoris -1
--1 thru 7</td>
-      <td>Brooks Koepka E
-E thru 5</td>
+      <td>Rory McIlroy E
+E thru 6</td>
+      <td>Patrick Cantlay +1
++1 thru 7</td>
       <td class="greyout leftborder">Jon Rahm +1
 +1 thru 7</td>
-      <td class="greyout">Justin Thomas(W) +3
-+3 thru 16</td>
+      <td class="greyout">Robert MacIntyre +2
++2 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Wild Billy Mitchell</td>
@@ -652,22 +636,6 @@ E thru 6</td>
 +3 thru 17</td>
     </tr>
     <tr>
-      <td class="bigbold">Fred Jamieson</td>
-      <td class="bigbold">-3</td>
-      <td>Scottie Scheffler -3
--3 thru 15</td>
-      <td>Rory McIlroy -1
--1 thru 5</td>
-      <td>Brooks Koepka E
-E thru 5</td>
-      <td>Jon Rahm(W) +1
-+1 thru 7</td>
-      <td class="greyout leftborder">Viktor Hovland +1
-+1 thru 6</td>
-      <td class="greyout">Xander Schauffele +1
-+1 thru 6</td>
-    </tr>
-    <tr>
       <td class="bigbold">Wylie</td>
       <td class="bigbold">-3</td>
       <td>Scottie Scheffler -3
@@ -682,38 +650,6 @@ E thru 5</td>
 +3 thru 16</td>
       <td class="greyout">Louis Oosthuizen +3
 +3 thru 17</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Santorini Sunsets</td>
-      <td class="bigbold">-2</td>
-      <td>Scottie Scheffler -3
--3 thru 15</td>
-      <td>Rory McIlroy -1
--1 thru 5</td>
-      <td>Patrick Cantlay +1
-+1 thru 7</td>
-      <td>Viktor Hovland +1
-+1 thru 6</td>
-      <td class="greyout leftborder">Xander Schauffele +1
-+1 thru 6</td>
-      <td class="greyout">Justin Thomas(W) +3
-+3 thru 16</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Lorette Hosegood</td>
-      <td class="bigbold">-2</td>
-      <td>Dustin Johnson -2
--2 thru 7</td>
-      <td>Rory McIlroy(W) -1
--1 thru 5</td>
-      <td>Jordan Spieth E
-E thru 6</td>
-      <td>Patrick Cantlay +1
-+1 thru 7</td>
-      <td class="greyout leftborder">Viktor Hovland +1
-+1 thru 6</td>
-      <td class="greyout">Jon Rahm +1
-+1 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Philip Dale</td>
@@ -764,36 +700,36 @@ E thru 6</td>
 +1 thru 7</td>
     </tr>
     <tr>
-      <td class="bigbold">Grace</td>
+      <td class="bigbold">Jabby</td>
       <td class="bigbold">-2</td>
       <td>Corey Conners -1
 -1 thru 11</td>
-      <td>Rory McIlroy -1
--1 thru 5</td>
       <td>Will Zalatoris -1
 -1 thru 7</td>
-      <td>Xander Schauffele(W) +1
-+1 thru 6</td>
-      <td class="greyout leftborder">Viktor Hovland +1
-+1 thru 6</td>
-      <td class="greyout">Collin Morikawa +1
+      <td>Brooks Koepka E
+E thru 5</td>
+      <td>Rory McIlroy E
+E thru 6</td>
+      <td class="greyout leftborder">Jon Rahm +1
 +1 thru 7</td>
+      <td class="greyout">Justin Thomas(W) +3
++3 thru 16</td>
     </tr>
     <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">Fred Jamieson</td>
       <td class="bigbold">-2</td>
-      <td>Tiger Woods(W) -1
--1 thru 17</td>
-      <td>Rory McIlroy -1
--1 thru 5</td>
-      <td>Will Zalatoris -1
--1 thru 7</td>
-      <td>Viktor Hovland +1
-+1 thru 6</td>
-      <td class="greyout leftborder">Collin Morikawa +1
+      <td>Scottie Scheffler -3
+-3 thru 15</td>
+      <td>Brooks Koepka E
+E thru 5</td>
+      <td>Rory McIlroy E
+E thru 6</td>
+      <td>Jon Rahm(W) +1
 +1 thru 7</td>
-      <td class="greyout">Justin Thomas +3
-+3 thru 16</td>
+      <td class="greyout leftborder">Viktor Hovland +1
++1 thru 6</td>
+      <td class="greyout">Xander Schauffele +1
++1 thru 6</td>
     </tr>
     <tr>
       <td class="bigbold">Neville Spillman</td>
@@ -828,6 +764,38 @@ E thru 5</td>
 +2 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Santorini Sunsets</td>
+      <td class="bigbold">-1</td>
+      <td>Scottie Scheffler -3
+-3 thru 15</td>
+      <td>Rory McIlroy E
+E thru 6</td>
+      <td>Patrick Cantlay +1
++1 thru 7</td>
+      <td>Viktor Hovland +1
++1 thru 6</td>
+      <td class="greyout leftborder">Xander Schauffele +1
++1 thru 6</td>
+      <td class="greyout">Justin Thomas(W) +3
++3 thru 16</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Lorette Hosegood</td>
+      <td class="bigbold">-1</td>
+      <td>Dustin Johnson -2
+-2 thru 7</td>
+      <td>Rory McIlroy(W) E
+E thru 6</td>
+      <td>Jordan Spieth E
+E thru 6</td>
+      <td>Patrick Cantlay +1
++1 thru 7</td>
+      <td class="greyout leftborder">Viktor Hovland +1
++1 thru 6</td>
+      <td class="greyout">Jon Rahm +1
++1 thru 7</td>
+    </tr>
+    <tr>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">-1</td>
       <td>Corey Conners(W) -1
@@ -844,18 +812,34 @@ E thru 6</td>
 +2 thru 12</td>
     </tr>
     <tr>
-      <td class="bigbold">Brian McDonald</td>
+      <td class="bigbold">Grace</td>
       <td class="bigbold">-1</td>
       <td>Corey Conners -1
 -1 thru 11</td>
-      <td>Rory McIlroy -1
--1 thru 5</td>
-      <td>Jordan Spieth E
+      <td>Will Zalatoris -1
+-1 thru 7</td>
+      <td>Rory McIlroy E
 E thru 6</td>
-      <td>Jon Rahm(W) +1
-+1 thru 7</td>
-      <td class="greyout leftborder">Xander Schauffele +1
+      <td>Xander Schauffele(W) +1
 +1 thru 6</td>
+      <td class="greyout leftborder">Viktor Hovland +1
++1 thru 6</td>
+      <td class="greyout">Collin Morikawa +1
++1 thru 7</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">-1</td>
+      <td>Tiger Woods(W) -1
+-1 thru 17</td>
+      <td>Will Zalatoris -1
+-1 thru 7</td>
+      <td>Rory McIlroy E
+E thru 6</td>
+      <td>Viktor Hovland +1
++1 thru 6</td>
+      <td class="greyout leftborder">Collin Morikawa +1
++1 thru 7</td>
       <td class="greyout">Justin Thomas +3
 +3 thru 16</td>
     </tr>
@@ -876,20 +860,20 @@ E thru 5</td>
 +1 thru 7</td>
     </tr>
     <tr>
-      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">Brian McDonald</td>
       <td class="bigbold">0</td>
-      <td>Rory McIlroy -1
--1 thru 5</td>
-      <td>Tiger Woods -1
--1 thru 17</td>
-      <td>Collin Morikawa(W) +1
+      <td>Corey Conners -1
+-1 thru 11</td>
+      <td>Rory McIlroy E
+E thru 6</td>
+      <td>Jordan Spieth E
+E thru 6</td>
+      <td>Jon Rahm(W) +1
 +1 thru 7</td>
-      <td>Viktor Hovland +1
+      <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 6</td>
-      <td class="greyout leftborder">Justin Thomas +3
+      <td class="greyout">Justin Thomas +3
 +3 thru 16</td>
-      <td class="greyout">Gary Woodland +3
-+3 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Kash Ahmad</td>
@@ -940,20 +924,20 @@ E thru 6</td>
 +3 thru 16</td>
     </tr>
     <tr>
-      <td class="bigbold">Hasbulla</td>
+      <td class="bigbold">Downhill Down Wind</td>
       <td class="bigbold">1</td>
-      <td>Rory McIlroy -1
--1 thru 5</td>
-      <td>Brooks Koepka E
-E thru 5</td>
-      <td>Patrick Cantlay(W) +1
+      <td>Tiger Woods -1
+-1 thru 17</td>
+      <td>Rory McIlroy E
+E thru 6</td>
+      <td>Collin Morikawa(W) +1
 +1 thru 7</td>
-      <td>Jon Rahm +1
-+1 thru 7</td>
-      <td class="greyout leftborder">Xander Schauffele +1
+      <td>Viktor Hovland +1
 +1 thru 6</td>
-      <td class="greyout">Justin Thomas +3
+      <td class="greyout leftborder">Justin Thomas +3
 +3 thru 16</td>
+      <td class="greyout">Gary Woodland +3
++3 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 1</td>
@@ -1050,6 +1034,22 @@ E thru 6</td>
 +1 thru 7</td>
       <td class="greyout">Patrick Reed +3
 +3 thru 10</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Hasbulla</td>
+      <td class="bigbold">2</td>
+      <td>Brooks Koepka E
+E thru 5</td>
+      <td>Rory McIlroy E
+E thru 6</td>
+      <td>Patrick Cantlay(W) +1
++1 thru 7</td>
+      <td>Jon Rahm +1
++1 thru 7</td>
+      <td class="greyout leftborder">Xander Schauffele +1
++1 thru 6</td>
+      <td class="greyout">Justin Thomas +3
++3 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Tony Muir</td>
