--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:11:24 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:12:07 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -157,35 +157,19 @@ E thru 6</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-9</td>
+      <td class="bigbold">-8</td>
       <td>Cameron Smith -6
 -6 thru 17</td>
       <td>Joaquin Niemann -3
 -3 thru 17</td>
-      <td>Rory McIlroy -1
--1 thru 5</td>
+      <td>Rory McIlroy E
+E thru 6</td>
       <td>Viktor Hovland +1
 +1 thru 6</td>
       <td class="greyout leftborder">Tommy Fleetwood(W) +3
 +3 (F)</td>
       <td class="greyout">Justin Thomas +3
 +3 thru 16</td>
-    </tr>
-    <tr>
-      <td class="bigbold">John Nixon</td>
-      <td class="bigbold">-8</td>
-      <td>Cameron Smith(W) -6
--6 thru 17</td>
-      <td>Rory McIlroy -1
--1 thru 5</td>
-      <td>Brooks Koepka E
-E thru 5</td>
-      <td>Collin Morikawa +1
-+1 thru 7</td>
-      <td class="greyout leftborder">Xander Schauffele +1
-+1 thru 6</td>
-      <td class="greyout">Patrick Cantlay +1
-+1 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
@@ -218,6 +202,22 @@ E thru 6</td>
 +1 thru 6</td>
       <td class="greyout">Justin Thomas +3
 +3 thru 16</td>
+    </tr>
+    <tr>
+      <td class="bigbold">John Nixon</td>
+      <td class="bigbold">-7</td>
+      <td>Cameron Smith(W) -6
+-6 thru 17</td>
+      <td>Brooks Koepka E
+E thru 5</td>
+      <td>Rory McIlroy E
+E thru 6</td>
+      <td>Collin Morikawa +1
++1 thru 7</td>
+      <td class="greyout leftborder">Xander Schauffele +1
++1 thru 6</td>
+      <td class="greyout">Patrick Cantlay +1
++1 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
