--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:19:17 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:20:00 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -157,17 +157,33 @@ E thru 6</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-6</td>
+      <td class="bigbold">-7</td>
       <td>Cameron Smith -4
 -4 (F)</td>
       <td>Joaquin Niemann -3
 -3 thru 17</td>
+      <td>Viktor Hovland E
+E thru 7</td>
       <td>Rory McIlroy E
 E thru 6</td>
-      <td>Viktor Hovland +1
-+1 thru 6</td>
       <td class="greyout leftborder">Tommy Fleetwood(W) +3
 +3 (F)</td>
+      <td class="greyout">Justin Thomas +3
++3 thru 17</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">-7</td>
+      <td>Cameron Smith(W) -4
+-4 (F)</td>
+      <td>Corey Conners -1
+-1 thru 11</td>
+      <td>Viktor Hovland E
+E thru 7</td>
+      <td>Jordan Spieth E
+E thru 6</td>
+      <td class="greyout leftborder">Xander Schauffele +1
++1 thru 7</td>
       <td class="greyout">Justin Thomas +3
 +3 thru 17</td>
     </tr>
@@ -185,22 +201,6 @@ E thru 6</td>
       <td class="greyout leftborder">Shane Lowry +1
 +1 (F)</td>
       <td class="greyout">Justin Thomas(W) +3
-+3 thru 17</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-6</td>
-      <td>Cameron Smith(W) -4
--4 (F)</td>
-      <td>Corey Conners -1
--1 thru 11</td>
-      <td>Jordan Spieth E
-E thru 6</td>
-      <td>Viktor Hovland +1
-+1 thru 6</td>
-      <td class="greyout leftborder">Xander Schauffele +1
-+1 thru 7</td>
-      <td class="greyout">Justin Thomas +3
 +3 thru 17</td>
     </tr>
     <tr>
@@ -252,6 +252,22 @@ E thru 16</td>
 +3 thru 17</td>
     </tr>
     <tr>
+      <td class="bigbold">Scott Williamson</td>
+      <td class="bigbold">-2</td>
+      <td>Sungjae Im -3
+-3 thru 10</td>
+      <td>Viktor Hovland(W) E
+E thru 7</td>
+      <td>Brooks Koepka E
+E thru 6</td>
+      <td>Collin Morikawa +1
++1 thru 8</td>
+      <td class="greyout leftborder">Patrick Cantlay +1
++1 thru 7</td>
+      <td class="greyout">Justin Thomas +3
++3 thru 17</td>
+    </tr>
+    <tr>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">-2</td>
       <td>Will Zalatoris -1
@@ -266,6 +282,22 @@ E thru 16</td>
 +1 thru 8</td>
       <td class="greyout">Justin Thomas(W) +3
 +3 thru 17</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Matt Tummon</td>
+      <td class="bigbold">-2</td>
+      <td>Dustin Johnson -2
+-2 thru 8</td>
+      <td>Jordan Spieth(W) E
+E thru 6</td>
+      <td>Viktor Hovland E
+E thru 7</td>
+      <td>Brooks Koepka E
+E thru 6</td>
+      <td class="greyout leftborder">Patrick Cantlay +1
++1 thru 7</td>
+      <td class="greyout">Jon Rahm +1
++1 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
@@ -284,22 +316,6 @@ E thru 16</td>
 +3 thru 17</td>
     </tr>
     <tr>
-      <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-1</td>
-      <td>Sungjae Im -3
--3 thru 10</td>
-      <td>Brooks Koepka E
-E thru 6</td>
-      <td>Viktor Hovland(W) +1
-+1 thru 6</td>
-      <td>Collin Morikawa +1
-+1 thru 8</td>
-      <td class="greyout leftborder">Patrick Cantlay +1
-+1 thru 7</td>
-      <td class="greyout">Justin Thomas +3
-+3 thru 17</td>
-    </tr>
-    <tr>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">-1</td>
       <td>Corey Conners(W) -1
@@ -314,22 +330,6 @@ E thru 6</td>
 +1 thru 7</td>
       <td class="greyout">Robert MacIntyre +2
 +2 thru 12</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">-1</td>
-      <td>Dustin Johnson -2
--2 thru 8</td>
-      <td>Jordan Spieth(W) E
-E thru 6</td>
-      <td>Brooks Koepka E
-E thru 6</td>
-      <td>Patrick Cantlay +1
-+1 thru 7</td>
-      <td class="greyout leftborder">Viktor Hovland +1
-+1 thru 6</td>
-      <td class="greyout">Jon Rahm +1
-+1 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
@@ -381,17 +381,17 @@ E thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">2</td>
+      <td>Viktor Hovland(W) E
+E thru 7</td>
       <td>Brooks Koepka E
 E thru 6</td>
-      <td>Viktor Hovland(W) +1
-+1 thru 6</td>
       <td>Jon Rahm +1
 +1 thru 7</td>
       <td>Collin Morikawa +1
 +1 thru 8</td>
       <td class="greyout leftborder">Patrick Reed +3
-+3 thru 10</td>
++3 thru 11</td>
       <td class="greyout">Luke List +5
 +5 (F)</td>
     </tr>
