--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:20:00 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:20:43 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,19 +141,19 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Larry Judge</td>
-      <td class="bigbold">-8</td>
+      <td class="bigbold">-7</td>
       <td>Cameron Smith -4
 -4 (F)</td>
       <td>Scottie Scheffler(W) -3
 -3 thru 16</td>
       <td>Corey Conners -1
--1 thru 11</td>
-      <td>Jordan Spieth E
-E thru 6</td>
-      <td class="greyout leftborder">Xander Schauffele +1
+-1 thru 12</td>
+      <td>Xander Schauffele +1
 +1 thru 7</td>
-      <td class="greyout">Sam Burns +1
+      <td class="greyout leftborder">Sam Burns +1
 +1 thru 9</td>
+      <td class="greyout">Jordan Spieth +1
++1 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
@@ -168,22 +168,6 @@ E thru 7</td>
 E thru 6</td>
       <td class="greyout leftborder">Tommy Fleetwood(W) +3
 +3 (F)</td>
-      <td class="greyout">Justin Thomas +3
-+3 thru 17</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-7</td>
-      <td>Cameron Smith(W) -4
--4 (F)</td>
-      <td>Corey Conners -1
--1 thru 11</td>
-      <td>Viktor Hovland E
-E thru 7</td>
-      <td>Jordan Spieth E
-E thru 6</td>
-      <td class="greyout leftborder">Xander Schauffele +1
-+1 thru 7</td>
       <td class="greyout">Justin Thomas +3
 +3 thru 17</td>
     </tr>
@@ -204,6 +188,22 @@ E thru 6</td>
 +3 thru 17</td>
     </tr>
     <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">-6</td>
+      <td>Cameron Smith(W) -4
+-4 (F)</td>
+      <td>Corey Conners -1
+-1 thru 12</td>
+      <td>Viktor Hovland E
+E thru 7</td>
+      <td>Xander Schauffele +1
++1 thru 7</td>
+      <td class="greyout leftborder">Jordan Spieth +1
++1 thru 7</td>
+      <td class="greyout">Justin Thomas +3
++3 thru 17</td>
+    </tr>
+    <tr>
       <td class="bigbold">John Nixon</td>
       <td class="bigbold">-5</td>
       <td>Cameron Smith(W) -4
@@ -220,22 +220,6 @@ E thru 6</td>
 +1 thru 7</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-4</td>
-      <td>Scottie Scheffler(W) -3
--3 thru 16</td>
-      <td>Will Zalatoris -1
--1 thru 7</td>
-      <td>Brooks Koepka E
-E thru 6</td>
-      <td>Jordan Spieth E
-E thru 6</td>
-      <td class="greyout leftborder">Jon Rahm +1
-+1 thru 7</td>
-      <td class="greyout">Shane Lowry +1
-+1 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jon Hosegood</td>
       <td class="bigbold">-3</td>
       <td>Scottie Scheffler -3
@@ -250,6 +234,22 @@ E thru 16</td>
 +1 (F)</td>
       <td class="greyout">Justin Thomas(W) +3
 +3 thru 17</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Bryson</td>
+      <td class="bigbold">-3</td>
+      <td>Scottie Scheffler(W) -3
+-3 thru 16</td>
+      <td>Will Zalatoris -1
+-1 thru 7</td>
+      <td>Brooks Koepka E
+E thru 6</td>
+      <td>Jon Rahm +1
++1 thru 7</td>
+      <td class="greyout leftborder">Jordan Spieth +1
++1 thru 7</td>
+      <td class="greyout">Shane Lowry +1
++1 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
@@ -284,90 +284,58 @@ E thru 16</td>
 +3 thru 17</td>
     </tr>
     <tr>
-      <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">-2</td>
-      <td>Dustin Johnson -2
--2 thru 8</td>
-      <td>Jordan Spieth(W) E
-E thru 6</td>
-      <td>Viktor Hovland E
-E thru 7</td>
-      <td>Brooks Koepka E
-E thru 6</td>
-      <td class="greyout leftborder">Patrick Cantlay +1
-+1 thru 7</td>
-      <td class="greyout">Jon Rahm +1
-+1 thru 7</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jamie Watters</td>
       <td class="bigbold">-1</td>
       <td>Dustin Johnson -2
 -2 thru 8</td>
       <td>Corey Conners -1
--1 thru 11</td>
+-1 thru 12</td>
       <td>Xander Schauffele(W) +1
 +1 thru 7</td>
       <td>Russell Henley +1
-+1 thru 11</td>
++1 thru 12</td>
       <td class="greyout leftborder">Justin Thomas +3
 +3 thru 17</td>
       <td class="greyout">Louis Oosthuizen +3
 +3 thru 17</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">-1</td>
+      <td>Dustin Johnson -2
+-2 thru 8</td>
+      <td>Viktor Hovland E
+E thru 7</td>
+      <td>Brooks Koepka E
+E thru 6</td>
+      <td>Jordan Spieth(W) +1
++1 thru 7</td>
+      <td class="greyout leftborder">Patrick Cantlay +1
++1 thru 7</td>
+      <td class="greyout">Jon Rahm +1
++1 thru 7</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">0</td>
       <td>Corey Conners(W) -1
--1 thru 11</td>
+-1 thru 12</td>
       <td>Daniel Berger -1
 -1 (F)</td>
-      <td>Jordan Spieth E
-E thru 6</td>
       <td>Collin Morikawa +1
 +1 thru 8</td>
-      <td class="greyout leftborder">Jon Rahm +1
+      <td>Jon Rahm +1
++1 thru 7</td>
+      <td class="greyout leftborder">Jordan Spieth +1
 +1 thru 7</td>
       <td class="greyout">Robert MacIntyre +2
 +2 thru 12</td>
     </tr>
     <tr>
-      <td class="bigbold">Adam Ryan</td>
-      <td class="bigbold">1</td>
-      <td>Corey Conners -1
--1 thru 11</td>
-      <td>Jordan Spieth E
-E thru 6</td>
-      <td>Jon Rahm +1
-+1 thru 7</td>
-      <td>Xander Schauffele +1
-+1 thru 7</td>
-      <td class="greyout leftborder">Justin Thomas(W) +3
-+3 thru 17</td>
-      <td class="greyout">Louis Oosthuizen +3
-+3 thru 17</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">1</td>
-      <td>Jordan Spieth E
-E thru 6</td>
-      <td>Brooks Koepka E
-E thru 6</td>
-      <td>Tony Finau E
-E thru 16</td>
-      <td>Jon Rahm(W) +1
-+1 thru 7</td>
-      <td class="greyout leftborder">Collin Morikawa +1
-+1 thru 8</td>
-      <td class="greyout">Patrick Cantlay +1
-+1 thru 7</td>
-    </tr>
-    <tr>
       <td class="bigbold">Derrick Shea</td>
       <td class="bigbold">2</td>
       <td>Corey Conners -1
--1 thru 11</td>
+-1 thru 12</td>
       <td>Jon Rahm +1
 +1 thru 7</td>
       <td>Patrick Cantlay +1
@@ -394,6 +362,38 @@ E thru 6</td>
 +3 thru 11</td>
       <td class="greyout">Luke List +5
 +5 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Adam Ryan</td>
+      <td class="bigbold">2</td>
+      <td>Corey Conners -1
+-1 thru 12</td>
+      <td>Jon Rahm +1
++1 thru 7</td>
+      <td>Xander Schauffele +1
++1 thru 7</td>
+      <td>Jordan Spieth +1
++1 thru 7</td>
+      <td class="greyout leftborder">Justin Thomas(W) +3
++3 thru 17</td>
+      <td class="greyout">Louis Oosthuizen +3
++3 thru 17</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Tummon</td>
+      <td class="bigbold">2</td>
+      <td>Brooks Koepka E
+E thru 6</td>
+      <td>Tony Finau E
+E thru 16</td>
+      <td>Jon Rahm(W) +1
++1 thru 7</td>
+      <td>Collin Morikawa +1
++1 thru 8</td>
+      <td class="greyout leftborder">Jordan Spieth +1
++1 thru 7</td>
+      <td class="greyout">Patrick Cantlay +1
++1 thru 7</td>
     </tr>
   </tbody>
 </table>
