--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:28:36 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:29:20 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -348,6 +348,22 @@ E thru 7</td>
 +3 thru 17</td>
     </tr>
     <tr>
+      <td class="bigbold">Jon Hosegood</td>
+      <td class="bigbold">-6</td>
+      <td>Scottie Scheffler -4
+-4 thru 17</td>
+      <td>Will Zalatoris -2
+-2 thru 8</td>
+      <td>Tony Finau -1
+-1 thru 17</td>
+      <td>Patrick Cantlay +1
++1 thru 8</td>
+      <td class="greyout leftborder">Shane Lowry +1
++1 (F)</td>
+      <td class="greyout">Justin Thomas(W) +3
++3 thru 17</td>
+    </tr>
+    <tr>
       <td class="bigbold">Matt Wilson</td>
       <td class="bigbold">-6</td>
       <td>Scottie Scheffler(W) -4
@@ -394,22 +410,6 @@ E thru 7</td>
 +1 (F)</td>
       <td class="greyout">Louis Oosthuizen +4
 +4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-5</td>
-      <td>Scottie Scheffler -4
--4 thru 17</td>
-      <td>Will Zalatoris -2
--2 thru 8</td>
-      <td>Tony Finau E
-E thru 16</td>
-      <td>Patrick Cantlay +1
-+1 thru 8</td>
-      <td class="greyout leftborder">Shane Lowry +1
-+1 (F)</td>
-      <td class="greyout">Justin Thomas(W) +3
-+3 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">CRED</td>
@@ -515,7 +515,7 @@ E thru 7</td>
       <td>Tiger Woods -1
 -1 (F)</td>
       <td>Rory McIlroy(W) E
-E thru 6</td>
+E thru 7</td>
       <td>Hideki Matsuyama E
 E thru 17</td>
       <td class="greyout leftborder">Xander Schauffele +1
@@ -563,7 +563,7 @@ E thru 7</td>
       <td>Corey Conners -1
 -1 thru 12</td>
       <td>Rory McIlroy E
-E thru 6</td>
+E thru 7</td>
       <td>Patrick Cantlay +1
 +1 thru 8</td>
       <td class="greyout leftborder">Jon Rahm +1
@@ -597,7 +597,7 @@ E thru 7</td>
       <td>Brooks Koepka E
 E thru 7</td>
       <td>Rory McIlroy E
-E thru 6</td>
+E thru 7</td>
       <td class="greyout leftborder">Jon Rahm(W) +1
 +1 thru 8</td>
       <td class="greyout">Xander Schauffele +1
@@ -627,7 +627,7 @@ E thru 7</td>
       <td>Viktor Hovland E
 E thru 7</td>
       <td>Rory McIlroy E
-E thru 6</td>
+E thru 7</td>
       <td>Patrick Cantlay +1
 +1 thru 8</td>
       <td class="greyout leftborder">Xander Schauffele +1
@@ -661,7 +661,7 @@ E thru 7</td>
       <td>Viktor Hovland E
 E thru 7</td>
       <td>Rory McIlroy E
-E thru 6</td>
+E thru 7</td>
       <td class="greyout leftborder">Xander Schauffele(W) +1
 +1 thru 7</td>
       <td class="greyout">Collin Morikawa +1
@@ -677,7 +677,7 @@ E thru 6</td>
       <td>Viktor Hovland E
 E thru 7</td>
       <td>Rory McIlroy E
-E thru 6</td>
+E thru 7</td>
       <td class="greyout leftborder">Collin Morikawa +1
 +1 thru 8</td>
       <td class="greyout">Justin Thomas +3
@@ -693,7 +693,7 @@ E thru 6</td>
       <td>Brooks Koepka E
 E thru 7</td>
       <td>Rory McIlroy E
-E thru 6</td>
+E thru 7</td>
       <td class="greyout leftborder">Jon Rahm +1
 +1 thru 8</td>
       <td class="greyout">Justin Thomas(W) +3
@@ -707,13 +707,29 @@ E thru 6</td>
       <td>Viktor Hovland E
 E thru 7</td>
       <td>Rory McIlroy E
-E thru 6</td>
+E thru 7</td>
       <td>Jon Rahm(W) +1
 +1 thru 8</td>
       <td class="greyout leftborder">Jordan Spieth +1
 +1 thru 7</td>
       <td class="greyout">Bubba Watson +1
 +1 thru 10</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Wild Billy Mitchell</td>
+      <td class="bigbold">-3</td>
+      <td>Dustin Johnson(W) -2
+-2 thru 8</td>
+      <td>Tony Finau -1
+-1 thru 17</td>
+      <td>Matthew Fitzpatrick -1
+-1 thru 7</td>
+      <td>Shane Lowry +1
++1 (F)</td>
+      <td class="greyout leftborder">Jordan Spieth +1
++1 thru 7</td>
+      <td class="greyout">Louis Oosthuizen +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Baggy Pants</td>
@@ -769,7 +785,7 @@ E thru 7</td>
       <td>Cameron Smith -4
 -4 (F)</td>
       <td>Rory McIlroy E
-E thru 6</td>
+E thru 7</td>
       <td>Sam Burns +1
 +1 thru 9</td>
       <td>Xander Schauffele +1
@@ -778,22 +794,6 @@ E thru 6</td>
 +3 thru 17</td>
       <td class="greyout">Justin Rose +5
 +5 thru 12</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Wild Billy Mitchell</td>
-      <td class="bigbold">-2</td>
-      <td>Dustin Johnson(W) -2
--2 thru 8</td>
-      <td>Matthew Fitzpatrick -1
--1 thru 7</td>
-      <td>Tony Finau E
-E thru 16</td>
-      <td>Shane Lowry +1
-+1 (F)</td>
-      <td class="greyout leftborder">Jordan Spieth +1
-+1 thru 7</td>
-      <td class="greyout">Louis Oosthuizen +4
-+4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Neville Spillman</td>
@@ -817,7 +817,7 @@ E thru 7</td>
       <td>Dustin Johnson -2
 -2 thru 8</td>
       <td>Rory McIlroy(W) E
-E thru 6</td>
+E thru 7</td>
       <td>Viktor Hovland E
 E thru 7</td>
       <td>Patrick Cantlay +1
@@ -915,7 +915,7 @@ E thru 7</td>
       <td>Viktor Hovland E
 E thru 7</td>
       <td>Rory McIlroy E
-E thru 6</td>
+E thru 7</td>
       <td>Collin Morikawa(W) +1
 +1 thru 8</td>
       <td class="greyout leftborder">Justin Thomas +3
@@ -945,7 +945,7 @@ E thru 7</td>
       <td>Corey Conners -1
 -1 thru 12</td>
       <td>Rory McIlroy E
-E thru 6</td>
+E thru 7</td>
       <td>Jon Rahm(W) +1
 +1 thru 8</td>
       <td>Xander Schauffele +1
@@ -1025,7 +1025,7 @@ E thru 17</td>
       <td>Brooks Koepka E
 E thru 7</td>
       <td>Rory McIlroy E
-E thru 6</td>
+E thru 7</td>
       <td>Patrick Cantlay(W) +1
 +1 thru 8</td>
       <td>Jon Rahm +1
