--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:28:36 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:29:20 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -165,7 +165,7 @@ body {
       <td>Viktor Hovland E
 E thru 7</td>
       <td>Rory McIlroy E
-E thru 6</td>
+E thru 7</td>
       <td class="greyout leftborder">Tommy Fleetwood(W) +3
 +3 (F)</td>
       <td class="greyout">Justin Thomas +3
@@ -189,13 +189,13 @@ E thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-5</td>
+      <td class="bigbold">-6</td>
       <td>Scottie Scheffler -4
 -4 thru 17</td>
       <td>Will Zalatoris -2
 -2 thru 8</td>
-      <td>Tony Finau E
-E thru 16</td>
+      <td>Tony Finau -1
+-1 thru 17</td>
       <td>Patrick Cantlay +1
 +1 thru 8</td>
       <td class="greyout leftborder">Shane Lowry +1
@@ -220,6 +220,22 @@ E thru 7</td>
 +1 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">-4</td>
+      <td>Will Zalatoris -2
+-2 thru 8</td>
+      <td>Tony Finau -1
+-1 thru 17</td>
+      <td>Daniel Berger -1
+-1 (F)</td>
+      <td>Brooks Koepka E
+E thru 7</td>
+      <td class="greyout leftborder">Collin Morikawa +1
++1 thru 8</td>
+      <td class="greyout">Justin Thomas(W) +3
++3 thru 17</td>
+    </tr>
+    <tr>
       <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">-4</td>
       <td>Cameron Smith(W) -4
@@ -236,22 +252,6 @@ E thru 7</td>
 +3 thru 17</td>
     </tr>
     <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">-3</td>
-      <td>Will Zalatoris -2
--2 thru 8</td>
-      <td>Daniel Berger -1
--1 (F)</td>
-      <td>Brooks Koepka E
-E thru 7</td>
-      <td>Tony Finau E
-E thru 16</td>
-      <td class="greyout leftborder">Collin Morikawa +1
-+1 thru 8</td>
-      <td class="greyout">Justin Thomas(W) +3
-+3 thru 17</td>
-    </tr>
-    <tr>
       <td class="bigbold">John Nixon</td>
       <td class="bigbold">-3</td>
       <td>Cameron Smith(W) -4
@@ -259,7 +259,7 @@ E thru 16</td>
       <td>Brooks Koepka E
 E thru 7</td>
       <td>Rory McIlroy E
-E thru 6</td>
+E thru 7</td>
       <td>Collin Morikawa +1
 +1 thru 8</td>
       <td class="greyout leftborder">Xander Schauffele +1
@@ -332,6 +332,22 @@ E thru 7</td>
 +2 thru 13</td>
     </tr>
     <tr>
+      <td class="bigbold">Shane Tummon</td>
+      <td class="bigbold">1</td>
+      <td>Tony Finau -1
+-1 thru 17</td>
+      <td>Brooks Koepka E
+E thru 7</td>
+      <td>Jon Rahm(W) +1
++1 thru 8</td>
+      <td>Collin Morikawa +1
++1 thru 8</td>
+      <td class="greyout leftborder">Jordan Spieth +1
++1 thru 7</td>
+      <td class="greyout">Patrick Cantlay +1
++1 thru 8</td>
+    </tr>
+    <tr>
       <td class="bigbold">Derrick Shea</td>
       <td class="bigbold">2</td>
       <td>Corey Conners -1
@@ -378,22 +394,6 @@ E thru 7</td>
 +3 thru 17</td>
       <td class="greyout">Louis Oosthuizen +4
 +4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">2</td>
-      <td>Brooks Koepka E
-E thru 7</td>
-      <td>Tony Finau E
-E thru 16</td>
-      <td>Jon Rahm(W) +1
-+1 thru 8</td>
-      <td>Collin Morikawa +1
-+1 thru 8</td>
-      <td class="greyout leftborder">Jordan Spieth +1
-+1 thru 7</td>
-      <td class="greyout">Patrick Cantlay +1
-+1 thru 8</td>
     </tr>
   </tbody>
 </table>
